--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 	
-	testRuntime('com.h2database:h2')
+	runtime('com.h2database:h2')
 	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	
