--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 #DATASOURCE CONFIGURATION
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/nextgen?useSSL=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=app
-spring.datasource.password=app12345
+spring.datasource.url=jdbc:h2:mem:nextgen;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 #MYBATIS CONFIGURATION
 mybatis.configuration.cache-enabled=true
 mybatis.configuration.default-statement-timeout=3000
 
+#CONFIGURE H2 ACCESS
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 #MYBATIS GENERATOR 
 mbg.target-package.client.mapper=org.taljaard.nextgear.mybatis.mapper
 mbg.target-package.client.mapper.type=ANNOTATEDMAPPER
 mbg.target-package.model=org.taljaard.nextgear.mybatis.dao
-mbg.target-project.java=nextgear-capitol-test/src/main/java
-mbg.target-project.resources=nextgear-capitol-test/src/main/resources
+mbg.target-project.java=../src/main/java
+mbg.target-project.resources=../src/main/resources
