updated logic to run app with mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 #DATASOURCE CONFIGURATION
-spring.datasource.url=jdbc:h2:mem:nextgen;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/nextgear?useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=app
+spring.datasource.password=app12345
+
+#spring.datasource.url=jdbc:h2:mem:nextgen;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 #MYBATIS CONFIGURATION
 mybatis.configuration.cache-enabled=true
